--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>Portfolio</title>
 </head>
+
 <body>
-    <h1>new website</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Cristiano Ronaldo</span> World
+                <h1>
+                    <h3>Build Footballer and Train Stopper</h3>
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays
+                        as a
+                        forward for Premier League club Manchester United and captains the Portugal national team</p>
+                    <a class="link-btn" target="_blank" href="https://www.youtube.com/watch?v=joIvki7iGiQ">Play</a>
+        </div>
+        <div class="half-width">
+            <img src="images/Hotpot (2).png" alt="">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/real2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a footballer</h3>
+            <p>Not only is Cristiano Ronaldo the richest soccer player in the world, but he is also the first soccer
+                player billionaire. According to Forbes, in 2020 he actually became the first active team-sport athlete
+                to surpass $1 billion in career earnings. He definitely does not live the impoverished life he once did.
+            </p>
+            <a class="link-btn" target="_blank" href="https://www.youtube.com/watch?v=joIvki7iGiQ">Goal</a>
+        </div>
+    </section>
 </body>
+
 </html>
